Fix spacing of tags

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -120,7 +120,7 @@ img {
     background: #b55555;
     color: #fff;
     border-radius: 4px;
-    margin: 0px 0px;
+    margin: 0px 1px;
     padding: 0px 2px;
     display: inline-block;
     font-weight: 400;
